# Homeworks_new

./: .gitignore  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: .dockerignore  Dockerfile  items_views.py  pyproject.toml
homework_03/testproject/: items_views.py  main.py
homework_03/testproject/users/: api.py  crud.py  dependencies.py
homework_03/users/: dependencies.py  schemas.py
homework_04/: docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
