[tool.poetry]
name = "testproject"
version = "0.1.0"
description = ""
authors = ["IvanNikandrov <ivannikandrov1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
